--- a/Response_referees.tex
+++ b/Response_referees.tex
@@ -47,6 +47,7 @@ List of major changes apported to the paper:
  \item Added a panel in figure 2 that contain the plot of the real part of $\alpha(\omega)$ in calculated in different computational domain. This new plot aims to evidence that the localization
  properties of th FS affect, on equal footing, both the real and the imaginary part of the linear response functional.
  \item We have reorganized the material after section III A. In particular we have introduced a new section (number IV in the actual version of the paper) in which we have discussed both the physical features of the excitation spectrum and the relative importance of localized vs. delocalized sector in expressing the susceptibility functional. This section also collects computational results for molecules beyond the case of $CO$ and benzene, already discussed in the previous version of the paper.  
+ \item State something about the inclusion of other molecules...
 \end{itemize}
 
 \section*{Response to the first referee}
@@ -89,16 +90,16 @@ We thank the referee for his/her comment on the paper. The text has been deeply 
 We answer to the critical points raised out in the report of the referee:
 
 \begin{enumerate}
- 
+  
  \item \emph{On the localized sector of excitation. Dependence on the symmetry and dimension of the molecule.}
  
  In section IIIA we have provided formal arguments that evidence that the excitation spectrum splits into two sectors with distinct features. The first one
  is composed by a finite set of localized excitations with discrete eigenvalues, whereas the second one contains a continuum spectrum of delocalized objects.
  For excitation energies lower than the ionization potential (IP) of the molecule all the excitations belong to the first sector. In the intermediate energy range which goes from IP to the absolute value of the energy of the deepest occupied orbital the two sectors compenetrate so that there are localized excitation embedded in a continuum of delocalized ones, and finally only elements of the second sector exist for higher values of the energy. 
  
- These formal results have been supported by numerical calculations in which the excitation spectrum of several molecules has been explicitly computed. %through the diagonalization using a systematic (wavelet) basis)
+ These formal results have been supported by numerical calculations in which the excitation spectrum of several molecules has been explicitly computed.
  The attribution of each excitation of the appropriate sector passes through the evaluation of the norm of the states $\phi_p^a$ and $\chi_p^a$ that build
- the diadic representation of the excitation (see eq. 17). Only states with norm greater than a given tolerance value are considered and the associated 
+ the dyadic representation of the excitation (see eq. 17). Only states with norm greater than a given tolerance value are considered and the associated 
  excitation is attributed to the first sector if the condition $\Omega_a < |\epsilon_p|$ with $\epsilon_a = \mathrm{max}\left(\epsilon_p\right)_{p\in a}$.
  This computational procedure provides results in optimum agreement with the formal arguments reported above. Indeed the excitation landscape of 
  (for instace the panel a o fig. 5 for the case of Benzene) evidences the presence of discrete excitations (the black bullets) embedded in a pseudo-continuum 
@@ -106,15 +107,20 @@ We answer to the critical points raised out in the report of the referee:
  
  In the previous version of the paper this type of analysis was limited to the case of $CO$ and Benzene molecules. However the same structure of the excitation spectrum is quite general and turns out not to be affected by the size or symmetry of the molecule. To check this statement we have repeated
  the same computational analysis for several other molecules of different shape and dimension like the Fullerene and the Aflatoxin. Results for this studies 
- are presented as supplementary materials. Looking at the excitation landscape for these cases (extracted with the same procedure and tolerance parameters?) it...  
- 
+ are presented as supplementary materials. Looking at the excitation landscape for these cases (extracted with the same procedure and tolerance parameters?) it...
+ to be completed after the inclusion of the table.....
  
 \item \emph{Regarding the localized excitations which can still be found above the IP threshold (Fig 5a), is there any scope to target these, to the
 exclusion of other states, so that a set of just the localized excitations can be calculated at reduced computational cost compared to the whole set?}
 
  During the review process we have deeply revised the final part of the paper (in particular the section IVB in the actual version of the manuscript) in order to clarify which is the relevance the two excitation sectors for obtaining an effective representation of the susceptibility functional.
-  
-
+ 
+ For a sake of concreteness this analysis has been declined for the relevant case of the computation of the dynamical polarizability. It emerges that the localized
+ sector of excitation is sufficient to express the imaginary part of $\alpha(\omega)$ \emph{only} for values of $\omega$ below IP (see eq. 21). The evaluation of
+ other quantities, namely $\mathrm{Im}(\alpha(\omega))$ above IP or $\mathrm{Re}(\alpha(\omega))$ in all the $\omega$ range requires a relevant contribution from
+ both the sectors of excitation spectrum. So, to answer to the question raised by the referee we can state that localized excitations above IP can be isolated and computed using the procedure described in the previous point of this report, but their knowledge alone is not useful to extract any physical quantities.
+ We can state that the multi-threshold structure of the excitation spectrum is surely interesting but is not very relevant for computational purposes.   
+ 
  \item \emph{On the exclusion ''by design'' of the delocalized part of the excitation spectrum}
  
  ......................
