added linguistic revision of the paper

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -257,7 +257,7 @@ such quantity is localized, in the sense of the above section. Stated otherwise,
 \emph{there is no need to express efficiently any portion of the continuum spectrum} to have a reliable GS treatment of molecules.
 
 Let us now inspect the case of LR calculations.
-In this framework one consider the unperturbed Hamiltonian $\hnot$ and assume that
+In this framework one considers the unperturbed Hamiltonian $\hnot$ and assumes that
 the GS density $\dmnot$ is accessible and expressed in a given computational treatment.
 The linear response formalism allows us to evaluate the modification of the expectation value of a generic observable induced by a
 time (or frequency)-dependent perturbing field $\op\Phi(\omega)$ acting on the system.
@@ -395,7 +395,7 @@ is expressed in terms of genuinely localized
 quantities. At these frequencies, the linear response functional $\braket{\delta\op O}_\Phi(\omega)$
 may thus be evaluated with computational setups that
 are similar to the ones usually employed for GS calculations.
-The convergence in this regime is ``strong'', in the sense that the basis functions employed enables us to express
+The convergence in this regime is ``strong'', in the sense that the basis functions employed enable us to express
 with arbitrary precision \emph{both} the states $\ket{\op O \psi_p}$ and $\ket{f_p^\Phi(\omega)}$.
 This is of course true even when the above states are only implicitly expressed by the employed LR treatment,
  as e.g. in the case of Krylov spaces generated from the states $\ket{\op\Phi(\omega) \psi_p}$ \cite{baroni2006,baroni2008,linlinKPM}.
@@ -428,7 +428,7 @@ numerical techniques which were originally tailored for GS calculations.
 
 As an example in support of these arguments we compare the {dynamical polarizability $\alpha(\omega)$} of a $CO$ molecule computed in three distinct real-space computational setups, which differs for the dimension of the computational domain.
 Results reported in the two panels of figure \ref{co_spectrum} show the real and imaginary part of $\alpha(\omega)$, respectively. In all the cases a typical behavior emerges: the curves are almost coincident in the below threshold regime,
-whereas the effect of the computational setup are clearly visible for values of  $\omega$ that exceed the threshold value.
+whereas the effects of the computational setup are clearly visible for values of  $\omega$ that exceed the threshold value.
 For these high-frequency regions, convergence might be reached for domains of much larger sizes than what presented here~\cite{baroni2008},
 which are -- as already noticed -- more than sufficient below threshold.
 
@@ -539,7 +539,7 @@ of the energy levels $\Omega_a$ associated to the bound-state-like objects.
 For delocalized states, as in the case of the continuum states of $\hnot$,
 such a condition has to be interpreted in distributional sense and does not lead to quantization of $\Omega_a$.
 Thus we can conclude that all the states $\ket{\chi^a_p}$ and the $\ket{\phi^a_p}$ with $\Omega_a$ below the threshold value constitute
--- if localized -- a genuine \emph{discrete} set, while the ones in the unbound energy range behaves as generalized eigenvectors associated to a
+-- if localized -- a genuine \emph{discrete} set, while the ones in the unbound energy range behave as generalized eigenvectors associated to a
 continuum spectrum.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -639,9 +639,9 @@ the agreement with the expected analytic structure presented in Fig.~\ref{Excita
 
 \subsection{Relative importance of discrete and continuum excitations}
   
-So far we have showed with both formal arguments and numerical calculations that the excitation spectrum split into two sectors with very distinct features.
+So far we have showed with both formal arguments and numerical calculations that the excitation spectrum splits into two sectors with very distinct features.
 It is then reasonable to ask which is their relative importance and, in particular, if there is the possibility to express observable quantities, in a suitable $\omega$ range, by only employing the sector of genuinely localized excitations.
-Stated otherwise, will the \emph{restriction} of $\sop \chi(\omega)$ to only localized excitations can be useful to extract some physical quantities?
+Stated otherwise, can the \emph{restriction} of $\sop \chi(\omega)$ to only localized excitations be useful to extract some physical quantities?
   
 In this regard it is illustrative to apply the above arguments to the evaluation of the dynamical polarizability tensor $\alpha_{ij}(\omega)$.
 Employing the formalism of Eq.~\eqref{deltaoexc} provides
@@ -684,7 +684,7 @@ continuum sector of the excitations can never be neglected}. In other terms, we 
 \subsection{Effective representation of $\sop \chi(\omega)$ for localized response densities}
 The above arguments have shown that the only quantity which can be expressed in terms of the localized sector of the excitation spectrum is the imaginary part of the susceptibility functional $\sop \chi(\omega)$ in the optical regime (i.e. $\omega <$  IP). The response density for a generic perturbation and $\omega$ value requires the inclusion in the Liouvillian DOS of the delocalized part of the excitation spectrum, even in view of expressing localized fluctuation states.
 
-A given numerical treatment typically provides only an effective description of the sector of delocalized excitation which in turns give rise to an effective 
+A given numerical treatment typically provides only an effective description of the sector of delocalized excitation which in turns gives rise to an effective 
 representation of the susceptibility functional. It appears therefore important to identify indicators that enable us to validate the capability
 of $\sop \chi(\omega)$ to express the localised FS (and thus the complete response density $\dm'_\Phi(\omega)$) below the IP threshold.
 %It appears therefore important to identify indicators that might assess the capability of
@@ -698,12 +698,12 @@ For instance, the static polarizability tensor $\alpha_{ij}$ can be calculated a
 \ee
 Such value can be straightforwardly compared with results of Eq.~\eqref{staticalpha}, where the localized FS is obtained from GS techniques as
 described in Sec.~\ref{FluctuationState}.
-This is the well-know $S_{-2}$ sum-rule (see e.g.\cite{Wagner2012}), that express the value of the static polarizability
+This is the well-know $S_{-2}$ sum-rule (see e.g.\cite{Wagner2012}), that expresses the value of the static polarizability
 in terms of the molecule's oscillator strengths.
-In the context of a numerical evaluation of the excitations, such sum rule can therefore interpreted as the capability of the pseudo-continuum sector of the excitation to
+In the context of a numerical evaluation of the excitations, such sum rule can therefore be interpreted as the capability of the pseudo-continuum sector of the excitation to
 express the localized FS -- and consequently the reference value of $\alpha_{ij}$ -- at $\omega=0$.
 
-We have analized the fullfillment of Eq.~\eqref{sminus2} for moeculs of various
+We have analized the fullfillment of Eq.~\eqref{sminus2} for molecules of various
 sizes and symmetries.
 In Fig.~\ref{co_AlphaExc} we show explicitly such a comparison in the case of the $CO$ molecule.
 We notice that a considerable number of pseudo-continuum excitations is required
@@ -727,7 +727,7 @@ varying the molecule size and symmetry seems not to modify the qualitative behav
 localized sector of the excitations alone is largely insufficient to express $\alpha_{ij}$.
 Such considerations are independent on the number of atoms of the molecule, as the range in $\omega$ needed to
 achieve satisfactory agreement is largely above the last valence ionization threshold, which is
-a intensive quantity.
+an intensive quantity.
 
 Once again, this proves that, for any numerical treatment,  pseudo-continuum excitations are fundamental in view of a correct expression
 of the response density below IP.
@@ -851,12 +851,12 @@ as follows
 \be\lb{ExcitationOpBasisTransition1}
 \op E_a = \sum_{ps}\excite{p}{s}X^a_{ps}+\decay{s}{p}Y^a_{ps} \;.
 \ee
-The contribution of the coupling operator in the equations of motion of excited states can expressed by means of the coupling kernel \eqref{CouplingKernelDef1} as
+The contribution of the coupling operator in the equations of motion of excited states can be expressed by means of the coupling kernel \eqref{CouplingKernelDef1} as
 \begin{align}
 & \bra{s}\op V'[\op E_a]\ket{\psi_p} = \sum_{qs'}\left(U[\decay{s}{p};\excite{q}{s'}]X^a_{qs'} + U[\decay{s}{p};\decay{s'}{q}]Y^a_{qs'}\right) \;,\nn \\
 & \bra{\psi_p}\op V'[\op E_a]\ket{s} = \sum_{qs'}\left(U[\excite{p}{s};\excite{q}{s'}]X^a_{qs'} + U[\excite{p}{s};\decay{s'}{q}]Y^a_{qs'}\right) \;, \nn
 \end{align}
-Give that we employ real functions both for $p$ and $s$ is real we also have $\excite{p}{s}(\r,\r') = \decay{s}{p}(\r',\r)$ and the density operator is symmetric in $\r \leftrightarrow \r'$.
+Given that we employ real functions both for $p$ and $s$ is real we also have $\excite{p}{s}(\r,\r') = \decay{s}{p}(\r',\r)$ and the density operator is symmetric in $\r \leftrightarrow \r'$.
 These conditions applied together imply that $U[\excite{p}{s};\excite{q}{s'}] = U[\decay{s}{p};\decay{s'}{q}]$, as well as $U[\decay{s}{p};\excite{q}{s'}] = U[\excite{p}{s};\decay{s'}{q}]$,
 and so equations \eqref{ExcitationOperatorsDef3} can be recasted in matrix form
 \be\lb{ExcitationMatrixEq1}
@@ -874,10 +874,10 @@ eigenvalue $\Omega_a$ depends on the capability of the basis set $\ket{s}$ to fu
     
 \section{Computational details} \lb{compdetails}
 The illustrative calculations presented in this paper are all KS-DFT calculations at the LDA level of theory. We employed the BigDFT code \cite{BigDFT},
-that make usage of Daubechies Wavelets as computational basis set. This orthonormal basis presents optimal features of in view of reproducibility of the results, and it has proven to represent precisely and explicitly system with Free as well as Periodic boundary conditions (BC), without any basis set superposition error nor supercell aliasing, for Free BC.
+that makes usage of Daubechies Wavelets as computational basis set. This orthonormal basis presents optimal features in view of reproducibility of the results, and it has proved to represent precisely and explicitly system with Free as well as Periodic boundary conditions (BC), without any basis set superposition error nor supercell aliasing, for Free BC.
 
 For Ground State results, the important parameters in the context of convergence of the calculations are the spacing of the wavelet grid and the size of the simulation domain: for bound-state like functions, convergence is achieved by reducing the grid spacing and increasing the simulation box size.
-Norm Conserving Pseudopotentials (PSP) of the HGH \cite{NLCCPSP} type are employed to remove the core electrons. Such PSP have proven to be able to provide all-electron accuracy for molecular systems.
+Norm Conserving Pseudopotentials (PSP) of the HGH \cite{NLCCPSP} type are employed to remove the core electrons. Such PSP have proved to be able to provide all-electron accuracy for molecular systems.
 
 Our LR calculation are performed with the Casida formalism \cite{bhaarathi}, where it is also important to include a sufficient number of unoccupied states in the transition operators. As pointed out in the text such states behave as plane waves: the features of wavelets enable us to represent localized and delocalized states on equal footing.
 For each size of the simulation domain, the number of unoccupied states used for building the Casida' eigenproblem has been increased up to convergence of the presented results.
@@ -893,7 +893,7 @@ The DOS reported in figure \ref{CO_exc} are obtained by adding a smearing parame
 \subsection{Benzene}
 The molecule is oriented in the $xy$ plain and the $x$-dimension of the box is equal to 15.0, 18.2 and 19.7 \AA.
 220 states have been computed in each setup and the corresponding
-energy reange for the unoccupied states is 16.9, 11.6 and 9.7 eV.
+energy range for the unoccupied states is 16.9, 11.6 and 9.7 eV.
 
 The DOS reported in figure \ref{C6H6_exc} are obtained by adding a complex shift of $1.3\times 10^{-2}$ eV whereas in the inset shift is $5\times 10^{-3}$ eV.
 
